--- a/src/glpi-wince-agent.rc
+++ b/src/glpi-wince-agent.rc
@@ -7,9 +7,9 @@
 //
 IDR_MAINMENU MENU DISCARDABLE
 BEGIN
-	POPUP "&Menu"
+	POPUP "&Agent"
 	BEGIN
-		MENUITEM	"&Test",	IDM_MENU_TEST
+		MENUITEM	"&Run",	IDM_MENU_RUN
 		MENUITEM	SEPARATOR
 		MENUITEM	"E&xit",	IDM_MENU_EXIT
 	END
