Updated skeleton, journal open is exe same folder

--- a/src/Makefile
+++ b/src/Makefile
@@ -5,7 +5,7 @@ ARCH    = arm-mingw32ce
 CC      = ${ARCH}-gcc
 WINDRES = ${ARCH}-windres
 STRIP   = ${ARCH}-strip
-CFLAGS  = -g ${STATIC} ${DEBUG} -Wall -D_WIN32_WINNT=0x0501
+CFLAGS  = -g ${STATIC} ${DEBUG} -Wall -DWIN32 -D_WIN32_WINNT=0x0501
 LIBS    = -lcommctrl
 STATIC  = 
 DEBUG   = 
