--- a/src/glpi-wince-agent.rc
+++ b/src/glpi-wince-agent.rc
@@ -9,6 +9,10 @@ IDR_MAINMENU MENU DISCARDABLE
 BEGIN
 	POPUP "&Agent"
 	BEGIN
+		MENUITEM	"Do &Inventory",	IDM_MENU_DOINVENTORY
+#ifdef DEBUG
+		MENUITEM	"&Debug inventory",	IDM_MENU_DEBUGINVENTORY
+#endif
 		MENUITEM	"&Run",	IDM_MENU_RUN
 		MENUITEM	SEPARATOR
 		MENUITEM	"E&xit",	IDM_MENU_EXIT
