Set configuration dialog as fullscreen by default Remove dialog frame

--- a/src/glpi-wince-agent.rc
+++ b/src/glpi-wince-agent.rc
@@ -39,7 +39,7 @@ END
 // Main window dialog
 //
 IDR_MAINDIALOG DIALOG 0, 10, 240, 230
-STYLE WS_VISIBLE|WS_CHILD|WS_DLGFRAME
+STYLE WS_VISIBLE|WS_CHILD
 BEGIN
 	LTEXT		"GLPI Server URL:",IDC_STATIC,2,6,58,10
 	EDITTEXT	IDC_EDIT_URL,2,16,120,12, ES_LEFT|ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP
